@@ -265,37 +265,10 @@
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xbb
 	USECODE_INTRINSIC_PTR(get_npc_id),	// 0xbc - Known
 	USECODE_INTRINSIC_PTR(set_npc_id),	// 0xbd - Known
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa3
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa4
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa5
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa6
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa7
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa8
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xa9
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xaa
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xab
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xac
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xad
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xae
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xaf
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb0
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb1
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb2
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb3
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb4
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb5
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb6
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb7
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb8
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb9
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xba
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xbb
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xbc
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xbd
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xbe
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xbf
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc0
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc1
+	USECODE_INTRINSIC_PTR(si_path_run_usecode),	// 0xc1
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc2
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc3
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc4
