@@ -1,5 +1,7 @@
 2001-01-09  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* SI - Schedules take effect immediately.
+	* SI - Guard opens gate (Intrinsic 0xc1 added).
 	* Usecode compiler - 1st pass pretty much complete.
 
 2001-01-10  Ryan Nunn <triforce@merlin.net.au>
